syntax = "proto3";
import "type.proto";

option java_package = "cn.vpclub.graduation.project.api";
option java_outer_classname = "TeacherUserProto";

message TeacherUserDTO{
    //教师用户id,主键
    Long teacheruserid=1;
    //创建时间
    Long teacherusercreatedTime=2;
    //创建人
    string teacherusercreatedBy=3;
    //更新时间
    Long teacheruserupdatedTime=4;
    //更新人
    string teacheruserupdatedBy=5;
    //删除标识（1：未删除，2：已删除）
    Long teacheruserdeleted=6;
    //教师用户名称
    string teacherusername=7;
    //教师用户密码
    string teacheruserpwd=8;
    //教师用户性别
    string teacherusersex=9;
    //教师用户年龄
    Long teacheruserage=10;
    //教师用户电话
    Long teacheruserphone=11;
    //教师用户住址
    string teacheruseradress=12;
    //教师用户教学课程id
    Long teacherusercurriculumid=13;
    //教师用户所属专业id
    Long teacheruserspecidtyid=14;
    //教师用户所属学院id
    Long teacheruseracademyid=15;
    //教师用户所属年级
    string teacherusergrade=16;
    //权限角色id
    Long jurisdictionid=17;
    //团队id
    Long teamid=18;
}

message TeacherUserResponse{
    Integer returnCode=1;
    string message=2;
    repeated TeacherUserDTO dataInfo=3;
}

message TeacherUserLoginResponse{
    Integer returnCode=1;
    string message=2;
    TeacherUserDTO dataInfo=3;
}

service TeacherUserService{
    //添加教师用户
    rpc add(TeacherUserDTO) returns(TeacherUserResponse){}
    //删除教师用户
    rpc delete(TeacherUserDTO) returns(TeacherUserResponse){}
    //修改教师用户
    rpc update(TeacherUserDTO) returns(TeacherUserResponse){}
    //查询单个教师用户
    rpc query(TeacherUserDTO) returns(TeacherUserResponse){}
    //查询所有教师用户
    rpc selectAll(TeacherUserDTO) returns(TeacherUserResponse){}
    //登录验证
    rpc login(TeacherUserDTO) returns(TeacherUserLoginResponse){}
    //根据姓名查询id
    rpc queryId(TeacherUserDTO) returns(TeacherUserResponse){}
    //根据团队id查询用户
    rpc selectByTeamId(TeacherUserDTO) returns(TeacherUserResponse){}

}